--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-adding new feature, trying to get some knowledge of this, I mean. the andrie's videos
+adding new feature, trying to get some knowledge of this, I mean. the andrie's vi
